# MPI_Prefix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
